-
Bug
-
Resolution: Fixed
-
P2: Important
-
Qt Creator 18.0.0
-
None
-
f950bb9d6 (18.0), b810a6ed9 (master)
Opening a project leads to a lot of unrelated and useless warnings:
Warnings while parsing QML type information of /Volumes/case-sensitive-workspace/qt-build/qtbase/qml/QML: Failed to parse "/Volumes/case-sensitive-workspace/qt-build/qtbase/qml/QML/jsroot.qmltypes". Error: /Volumes/case-sensitive-workspace/qt-build/qtbase/qml/QML/jsroot.qmltypes:634:9: Property object is missing a name or type script binding. /Volumes/case-sensitive-workspace/qt-build/qtbase/qml/QML/jsroot.qmltypes:635:9: Property object is missing a name or type script binding. /Volumes/case-sensitive-workspace/qt-build/qtbase/qml/QML/jsroot.qmltypes:659:9: Property object is missing a name or type script binding. /Volumes/case-sensitive-workspace/qt-build/qtbase/qml/QML/jsroot.qmltypes:660:9: Property object is missing a name or type script binding. /Volumes/case-sensitive-workspace/qt-build/qtbase/qml/QML/jsroot.qmltypes:738:9: Property object is missing a name or type script binding. /Volumes/case-sensitive-workspace/qt-build/qtbase/qml/QML/jsroot.qmltypes:739:9: Property object is missing a name or type script binding. /Volumes/case-sensitive-workspace/qt-build/qtbase/qml/QML/jsroot.qmltypes:776:9: Property object is missing a name or type script binding. /Volumes/case-sensitive-workspace/qt-build/qtbase/qml/QML/jsroot.qmltypes:1165:9: Property object is missing a name or type script binding. /Volumes/case-sensitive-workspace/qt-build/qtbase/qml/QML/jsroot.qmltypes:1166:9: Property object is missing a name or type script binding. /Volumes/case-sensitive-workspace/qt-build/qtbase/qml/QML/jsroot.qmltypes:1167:9: Property object is missing a name or type script binding. /Volumes/case-sensitive-workspace/qt-build/qtbase/qml/QML/jsroot.qmltypes:1168:9: Property object is missing a name or type script binding. /Volumes/case-sensitive-workspace/qt-build/qtbase/qml/QML/jsroot.qmltypes:1574:9: Property object is missing a name or type script binding. /Volumes/case-sensitive-workspace/qt-build/qtbase/qml/QML/jsroot.qmltypes:1730:9: Property object is missing a name or type script binding. /Volumes/case-sensitive-workspace/qt-build/qtbase/qml/QML/jsroot.qmltypes:1731:9: Property object is missing a name or type script binding. /Volumes/case-sensitive-workspace/qt-build/qtbase/qml/QML/jsroot.qmltypes:1739:9: Property object is missing a name or type script binding. /Volumes/case-sensitive-workspace/qt-build/qtbase/qml/QML/jsroot.qmltypes:2928:9: Property object is missing a name or type script binding. /Volumes/case-sensitive-workspace/qt-build/qtbase/qml/QML/jsroot.qmltypes:2929:9: Property object is missing a name or type script binding. /Volumes/case-sensitive-workspace/qt-build/qtbase/qml/QML/jsroot.qmltypes:2953:9: Property object is missing a name or type script binding. /Volumes/case-sensitive-workspace/qt-build/qtbase/qml/QML/jsroot.qmltypes:2954:9: Property object is missing a name or type script binding. /Volumes/case-sensitive-workspace/qt-build/qtbase/qml/QML/jsroot.qmltypes:3068:9: Property object is missing a name or type script binding. /Volumes/case-sensitive-workspace/qt-build/qtbase/qml/QML/jsroot.qmltypes:3069:9: Property object is missing a name or type script binding. /Volumes/case-sensitive-workspace/qt-build/qtbase/qml/QML/jsroot.qmltypes:3070:9: Property object is missing a name or type script binding. /Volumes/case-sensitive-workspace/qt-build/qtbase/qml/QML/jsroot.qmltypes:3072:9: Property object is missing a name or type script binding. /Volumes/case-sensitive-workspace/qt-build/qtbase/qml/QML/jsroot.qmltypes:3073:9: Property object is missing a name or type script binding. /Volumes/case-sensitive-workspace/qt-build/qtbase/qml/QML/jsroot.qmltypes:3319:9: Property object is missing a name or type script binding. /Volumes/case-sensitive-workspace/qt-build/qtbase/qml/QML/jsroot.qmltypes:3320:9: Property object is missing a name or type script binding. /Volumes/case-sensitive-workspace/qt-build/qtbase/qml/QML/jsroot.qmltypes:3344:9: Property object is missing a name or type script binding. /Volumes/case-sensitive-workspace/qt-build/qtbase/qml/QML/jsroot.qmltypes:3345:9: Property object is missing a name or type script binding. /Volumes/case-sensitive-workspace/qt-build/qtbase/qml/QML/jsroot.qmltypes:3369:9: Property object is missing a name or type script binding. /Volumes/case-sensitive-workspace/qt-build/qtbase/qml/QML/jsroot.qmltypes:3370:9: Property object is missing a name or type script binding. /Volumes/case-sensitive-workspace/qt-build/qtbase/qml/QML/jsroot.qmltypes:3399:9: Property object is missing a name or type script binding. /Volumes/case-sensitive-workspace/qt-build/qtbase/qml/QML/jsroot.qmltypes:3400:9: Property object is missing a name or type script binding. /Volumes/case-sensitive-workspace/qt-build/qtbase/qml/QML/jsroot.qmltypes:3401:9: Property object is missing a name or type script binding. /Volumes/case-sensitive-workspace/qt-build/qtbase/qml/QML/jsroot.qmltypes:3402:9: Property object is missing a name or type script binding. /Volumes/case-sensitive-workspace/qt-build/qtbase/qml/QML/jsroot.qmltypes:3403:9: Property object is missing a name or type script binding. /Volumes/case-sensitive-workspace/qt-build/qtbase/qml/QML/jsroot.qmltypes:3404:9: Property object is missing a name or type script binding. /Volumes/case-sensitive-workspace/qt-build/qtbase/qml/QML/jsroot.qmltypes:3405:9: Property object is missing a name or type script binding. /Volumes/case-sensitive-workspace/qt-build/qtbase/qml/QML/jsroot.qmltypes:3406:9: Property object is missing a name or type script binding. /Volumes/case-sensitive-workspace/qt-build/qtbase/qml/QML/jsroot.qmltypes:3407:9: Property object is missing a name or type script binding. /Volumes/case-sensitive-workspace/qt-build/qtbase/qml/QML/jsroot.qmltypes:3408:9: Property object is missing a name or type script binding. /Volumes/case-sensitive-workspace/qt-build/qtbase/qml/QML/jsroot.qmltypes:3409:9: Property object is missing a name or type script binding. /Volumes/case-sensitive-workspace/qt-build/qtbase/qml/QML/jsroot.qmltypes:3410:9: Property object is missing a name or type script binding. /Volumes/case-sensitive-workspace/qt-build/qtbase/qml/QML/jsroot.qmltypes:3604:9: Property object is missing a name or type script binding. /Volumes/case-sensitive-workspace/qt-build/qtbase/qml/QML/jsroot.qmltypes:3605:9: Property object is missing a name or type script binding. /Volumes/case-sensitive-workspace/qt-build/qtbase/qml/QML/jsroot.qmltypes:3606:9: Property object is missing a name or type script binding. /Volumes/case-sensitive-workspace/qt-build/qtbase/qml/QML/jsroot.qmltypes:3607:9: Property object is missing a name or type script binding. /Volumes/case-sensitive-workspace/qt-build/qtbase/qml/QML/jsroot.qmltypes:3608:9: Property object is missing a name or type script binding. /Volumes/case-sensitive-workspace/qt-build/qtbase/qml/QML/jsroot.qmltypes:3609:9: Property object is missing a name or type script binding. /Volumes/case-sensitive-workspace/qt-build/qtbase/qml/QML/jsroot.qmltypes:3610:9: Property object is missing a name or type script binding. /Volumes/case-sensitive-workspace/qt-build/qtbase/qml/QML/jsroot.qmltypes:3611:9: Property object is missing a name or type script binding.
properties without type are fine when inside the jsroot or builtin file., we don't warn about them in qtdeclarative.