qmljstypedescriptionreader: don't warn about missing type binding

Adapt qmljstypedescriptionreader to its qtdeclarative counterpart and
only warn about missing name bindings. This helps to mute lots of
warnings of the type:
.../qml/QML/jsroot.qmltypes:3399:9: Property object is missing a
name or type script binding.
that can't be fixed and that are actually totally fine.

Task-number: QTCREATORBUG-33624
Change-Id: Icfe0a5fd4342cf8060fc1ff7e0f60f3914666467
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>